# nvml-server

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: error.rs  main.rs
src/routes/: gpu.rs  mod.rs  stats.rs
