[package]
name = "nvml-server"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
nvml-wrapper = { version = "0.10.0", features = ["serde"] }
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sysinfo = { version = "0.30.12", features = ["serde"] }
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
